# keen-scout

./: .env.example  .gitignore  README.md  pyproject.toml  researcher.py
.claude/commands/: researcher.md
examples_of_finished_queries/2026-03-15_gry-steam-2025-raport/: answer.html  answer.md  sources.md
examples_of_finished_queries/2026-03-16_oscary-2026-podsumowanie/: answer.docx  answer.md  sources.md
tools/: arxiv.py  browser.py  dane_gov.py  datawrapper.py  duckduckgo.py  firecrawl.py  krea.py  memory.py  polona.py  wiki.py
